# cse142-assignment3

./: .gitignore  README.md  RELEASE_BUILT_AT.txt  config.yaml  pyproject.toml  randomStuff.py  requirements.txt
checkpoints/: best_model.pt  final_model.pt  metrics.json
data/: reference_tokenizer.pkl  tokenizer.json
scripts/: final_check.py  prepare_data.py  sanity_check.py  train.py  validate_submission.py
tests/: adapters.py  test_lr_schedule.py  test_model.py  test_nn_utils.py  test_tokenizer.py  test_training.py
transformer_lm/: lr_schedule.py  model.py  nn_utils.py  tokenizer.py  training_utils.py
