[project]
name = "transformer-lm"
version = "1.0.0"
description = "Transformer LM from scratch — undergraduate ML course final assignment"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0,<3",
    "numpy>=1.24.0,<3",
    "pytest>=7.0.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["transformer_lm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
